[package]
name = "multitags_lib"
version = "0.1.0"
authors = ["Richard Stewing <richard.stewing@udo.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.106", features = ["derive"] }

serde_json = "1.0"